--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                            <div class="container-fluid">
                               <div class="carousel-caption relative">
                                  <div class="bluid">
-                                    <h1>Creative  <br> Idea Makes Cleaver </h1>
+                                    <h1>Creative  <br> Idea Makes Clever </h1>
                                     <p>There are many variations of passages of Lorem Ipsum <br>available, but the majority have suffered alteration
                                     </p>
                                     <a class="read_more" href="about.html">About Company </a><a class="read_more" href="contact.html">Contact </a>
