--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                     <h1>Creative  <br>Work my own Idea </h1>
                                     <p>There are many variations of passages of Lorem Ipsum <br>available, but the majority have suffered alteration
                                     </p>
-                                    <a class="read_more" href="about.html">About Company </a><a class="read_more" href="contact.html">Contact </a>
+                                    <a class="read_more" href="about.html">About </a><a class="read_more" href="contact.html">Contact </a>
                                  </div>
                               </div>
                            </div>
