--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                     <h1>Creative  <br> Idea Makes Clever </h1>
                                     <p>There are many variations of passages of Lorem Ipsum <br>available, but the majority have suffered alteration
                                     </p>
-                                    <a class="read_more" href="about.html">About Company </a><a class="read_more" href="contact.html">Contact </a>
+                                    <a class="read_more" href="about.html">About  </a><a class="read_more" href="contact.html">Contact </a>
                                  </div>
                               </div>
                            </div>
@@ -113,7 +113,7 @@
                                     <h1>Creative  <br>Work my own Idea </h1>
                                     <p>There are many variations of passages of Lorem Ipsum <br>available, but the majority have suffered alteration
                                     </p>
-                                    <a class="read_more" href="about.html">About Company </a><a class="read_more" href="contact.html">Contact </a>
+                                    <a class="read_more" href="about.html">About  </a><a class="read_more" href="contact.html">Contact </a>
                                  </div>
                               </div>
                            </div>
@@ -125,7 +125,7 @@
                                     <h1>Creative  <br>Work my own Idea </h1>
                                     <p>There are many variations of passages of Lorem Ipsum <br>available, but the majority have suffered alteration
                                     </p>
-                                    <a class="read_more" href="about.html">About Company </a><a class="read_more" href="contact.html">Contact </a>
+                                    <a class="read_more" href="about.html">About  </a><a class="read_more" href="contact.html">Contact </a>
                                  </div>
                               </div>
                            </div>
@@ -137,7 +137,7 @@
                                     <h1>Creative  <br>Work my own Idea </h1>
                                     <p>There are many variations of passages of Lorem Ipsum <br>available, but the majority have suffered alteration
                                     </p>
-                                    <a class="read_more" href="about.html">About Company </a><a class="read_more" href="contact.html">Contact </a>
+                                    <a class="read_more" href="about.html">About  </a><a class="read_more" href="contact.html">Contact </a>
                                  </div>
                               </div>
                            </div>
@@ -303,7 +303,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage text_align_center">
-                     <h2>About Company</h2>
+                     <h2>About </h2>
                      <p>There are many variations of passages of Lorem Ipsum available, but the majority have </p>
                   </div>
                </div>
@@ -559,7 +559,7 @@
                   </div>
                   <div class="col-md-3 col-sm-6">
                      <div class="Informa">
-                        <h3>company</h3>
+                        <h3></h3>
                         <ul>
                            <li>It is a long established                             
                            </li>
